add some changes and add new section

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
         <a href="#" class="header__link">
           <img src="./images/sytelogo.svg" alt="" class="header__logo">
         </a>
-            <ul class="header__list">
-              <li class="header__item"><a href="#" class="header__item--link">Home</a></li>
-              <li class="header__item"><a href="#" class="header__item--link">About Us</a></li>
-              <li class="header__item"><a href="#" class="header__item--link">Features</a></li>
-              <li class="header__item"><a href="#" class="header__item--link">Solution</a></li>
-              <li class="header__item" type="button"><button class="header__btn"></button></li>
-            </ul>
-      
-  
+        <ul class="header__list">
+          <li class="header__item"><a href="#" class="header__item--link">Home</a></li>
+          <li class="header__item"><a href="#" class="header__item--link">About Us</a></li>
+          <li class="header__item"><a href="#" class="header__item--link">Features</a></li>
+          <li class="header__item"><a href="#" class="header__item--link">Solution</a></li>
+          <li class="header__item"><button class="header__btn btn"type="button"></button></li>
+        </ul>
       </div>
     </div>
   </header>
@@ -31,7 +29,7 @@
         <div class="hero__wrapper">
           <div class="hero__right">
             <div class="hero__before--wrapper">
-              <p class="hero__before"><strong>20%</strong> DISCOUNT FOR <strong>1 MONTH</strong> ACCOUNT</p>
+              <p class="hero__before"><strong> 20% </strong> DISCOUNT FOR <strong> 1 MONTH </strong> ACCOUNT </p>
             </div>
             <div class="hero__title--wrapper">
               <h1 class="hero__title">The Next <span class="hero__title--span">Generation</span> Payment Method.</h1>
@@ -40,7 +38,57 @@
               <p class="hero__txt">Our team of experts uses a methodology to identify the credit cards most likely to fit your needs. We examine annual percentage rates, annual fees.</p>
             </div>
           </div>
-          <img src="./images/Group 481775.svg" alt="cards" class="hero__img">
+          <img src="./images/cards.svg" width="600" height="638" alt="cards" class="hero__img">
+        </div>
+          <ul class="hero__list">
+            <li class="hero__item"><p class="hero__txt--last">3800+ <span class="hero__title--span hero__span">User Active</span></p></li>
+            <hr class="hero__hr">
+            <li class="hero__item"><p class="hero__txt--last">230+ <span class="hero__title--span hero__span">TRUSTED BY COMPANY</span></p></li>
+            <hr class="hero__hr">
+            <li class="hero__item"><p class="hero__txt--last">$230M+ <span class="hero__title--span hero__span">TRANSACTION</span></p></li>
+          </ul>
+      </div>
+    </section>
+    <!-- start business  -->
+    <section class="business">
+      <div class="container">
+        <div class="business__wrapper">
+          <div class="business__left">
+            <h2 class="business__title">You do the business, we’ll handle the money.</h2>
+            <p class="business__txt">With the right credit card, you can improve your financial life by building credit, earning rewards and saving money. But with hundreds of credit cards on the market.</p>
+            <a href="#" class="business__link"><strong>Get Started</strong></a>
+          </div>
+          <div class="business__right">
+            <div class="business__top">
+              <div class="business__top--wrapper">
+                <div class="title__wrapper">
+                  <h3 class="business__top--title">Rewards</h3>
+                </div>
+                <div class="txt__wrapper">
+                  <p class="business__top--txt">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                </div>
+              </div>
+            </div>
+            <div class="business__middle">
+              <div class="middle__wrapper">
+                <div class="middle__title">
+                  <h3 class="business__middle--title">100% Secured</h3>
+                </div>
+                <div class="middle__txt">
+                  <p class="business__middle--txt">We take proactive steps make sure your information and transactions are secure.</p>
+                </div>
+              </div>
+            </div>
+            <div class="business__bottom">
+              <div class="bottom__wrapper">
+                <div class="bottom__title">
+                  <h3 class="business__bottom--title">Balance Transfer</h3>
+                </div>
+                <div class="bottom__txt">
+                  <p class="business__bottom--txt">A balance transfer credit card can save you a lot of money in interest charges.</p>
+                </div>
+              </div>
+          </div>
         </div>
       </div>
     </section>
