--- a/index.html
+++ b/index.html
@@ -59,39 +59,146 @@
             <a href="#" class="business__link"><strong>Get Started</strong></a>
           </div>
           <div class="business__right">
-            <div class="business__top">
+            <div class="business__top business__top-middle-bottom">
               <div class="business__top--wrapper">
                 <div class="title__wrapper">
-                  <h3 class="business__top--title">Rewards</h3>
+                  <h3 class="business__top--title business__right--txts">Rewards</h3>
                 </div>
                 <div class="txt__wrapper">
-                  <p class="business__top--txt">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                  <p class="business__top--txt business__right--txts">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                 </div>
               </div>
             </div>
-            <div class="business__middle">
+            <div class="business__middle business__top-middle-bottom">
               <div class="middle__wrapper">
                 <div class="middle__title">
-                  <h3 class="business__middle--title">100% Secured</h3>
+                  <h3 class="business__middle--title business__right--txts">100% Secured</h3>
                 </div>
                 <div class="middle__txt">
-                  <p class="business__middle--txt">We take proactive steps make sure your information and transactions are secure.</p>
+                  <p class="business__middle--txt business__right--txts">We take proactive steps make sure your information and transactions are secure.</p>
                 </div>
               </div>
             </div>
-            <div class="business__bottom">
+            <div class="business__bottom business__top-middle-bottom">
               <div class="bottom__wrapper">
                 <div class="bottom__title">
-                  <h3 class="business__bottom--title">Balance Transfer</h3>
+                  <h3 class="business__bottom--title business__right--txts">Balance Transfer</h3>
                 </div>
                 <div class="bottom__txt">
-                  <p class="business__bottom--txt">A balance transfer credit card can save you a lot of money in interest charges.</p>
+                  <p class="business__bottom--txt business__right--txts">A balance transfer credit card can save you a lot of money in interest charges.</p>
                 </div>
               </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- control start  -->
+    <section class="controll">
+      <div class="container">
+        <div class="controll__wrapper">
+          <div class="controll__left">
+            <img src="./images/controll.png" alt="payment controls" class="controol__img1">
+          </div>
+            <div class="controll__right">
+              <div class="controll__txts">
+                <h2 class="controll__title">Easily control your billing & invoicing.</h2>
+                <p class="controll__txt">Elit enim sed massa etiam. Mauris eu adipiscing ultrices ametodio aenean neque. Fusce ipsum orci rhoncus aliporttitor integer platea placerat.</p>
+              </div>
+              <div class="controll__right--images">
+                <img src="./images/appstore.png" alt="app for payment app download" class="controll__images">
+                <img src="./images/playmarket.png" alt="app for payment app download" class="controll__images">
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+    <!-- card start  -->
+    <section class="card">
+      <div class="container">
+        <div class="card__wrapper">
+          <div class="card__left">
+            <h2 class="card__title">Find a better card deal in few easy steps.</h2>
+            <div class="card__txt--wrapper">x
+              <p class="card__txt">Arcu tortor, purus in mattis at sed integer faucibus. Aliquet quis aliquet eget mauris tortor.ç Aliquet ultrices ac, ametau.</p>
+            </div>
+            <a href="#" class="business__link"><strong>Get Started</strong></a>
+          </div>
+          <div class="card__right">
+            <img src="./images/payment.png" alt="payment" class="card__img">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="people">
+      <div class="container">
+        <div class="people__wrapper">
+          <div class="people__top">
+            <div class="people__title--wrapper">
+              <h2 class="people__title">What people are saying about us</h2>
+            </div>
+            <div class="people__txt--wrapper">
+              <p class="people__txt">Everything you need to accept card payments and grow your business anywhere on the planet.</p>
+            </div>
+          </div>
+          <ul class="people__list">
+            <li class="people__item">
+              <img src="./images/double.png" alt="double / " class="people__item--img">
+              <p class="people__item--txt">Money is only a tool. It will take you wherever you wish, but it will not replace you as the driver.</p>
+              <div class="people__contact">
+                <div class="people__contact--wrapper">
+                  <p class="people__account">Herman Jensen</p>
+                  <p class="people__account--txt">Founder & Leader</p>
+                </div>
+              </div>
+            </li>
+            <li class="people__item">
+              <img src="./images/double.png" alt="double / " class="people__item--img">
+              <p class="people__item--txt">Money makes your life easier. If you're lucky to have it, you're lucky.</p>
+              <div class="people__contact">
+                <div class="people__contact--wrapper">
+                  <p class="people__account">Steve Mark</p>
+                  <p class="people__account--txt">Founder & Leader</p>
+                </div>
+              </div>
+            </li>
+            <li class="people__item">
+              <img src="./images/double.png" alt="double / " class="people__item--img">
+              <p class="people__item--txt">It is usually people in the money business, finance, and international trade that are really rich.</p>
+              <div class="people__contact">
+                <div class="people__contact--wrapper">
+                  <p class="people__account">Kenn Gallagher</p>
+                  <p class="people__account--txt">Founder & Leader</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="add">
+      <div class="container">
+        <div class="add__wrapper">
+          <img src="./images/airbnb.png" alt="adds" class="add__img">
+          <img src="./images/binance.png" alt="adds" class="add__img">
+          <img src="./images/coinbase.png" alt="adds" class="add__img">
+          <img src="./images/dropbox.png" alt="adds" class="add__img">
+        </div>
+      </div>
+    </section>
+    <section class="service">
+      <div class="container">
+        <div class="service__wrapper">
+          <div class="service__txts--wrapper">
+            <h2 class="service__title">Let’s try our service now!</h2>
+            <p class="service__txt">Everything you need to accept card payments and grow your business anywhere on the planet.</p>
+          </div>
+          <a href="#" class="business__link last-link">Get Started</a>
+        </div>
+      </div>
+    </section>
+    <footer>
+      
+    </footer>
   </main>
   <script src="./javascript.js"></script>
 </body>
