add footer and some images

--- a/index.html
+++ b/index.html
@@ -197,7 +197,49 @@
       </div>
     </section>
     <footer>
-      
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__img-txt--wrapper">
+            <img src="./images/sytelogo.svg" alt="cyte logo" class="footer__logo">
+            <div class="footer__txt--wrapper">
+              <p class="footer__txt">A new way to make the payments easy, reliable and secure.</p>
+            </div>
+          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <p class="footer__titles">Usefull Links</h2>
+              <p class="footer__subtxt">Content</p>
+              <p class="footer__subtxt">How it Works</p>
+              <p class="footer__subtxt">Create</p>
+              <p class="footer__subtxt">Explore</p>
+              <p class="footer__subtxt">Terms & Services</p>
+            </li>
+            <li class="footer__item">
+              <p class="footer__titles">Community</h2>
+              <p class="footer__subtxt">Help Center</p>
+              <p class="footer__subtxt">Partners</p>
+              <p class="footer__subtxt">Suggestions</p>
+              <p class="footer__subtxt">Blog</p>
+              <p class="footer__subtxt">Newsletters</p>
+            </li>
+            <li class="footer__item">
+              <p class="footer__titles">Partner</h2>
+              <p class="footer__subtxt">Our Partner</p>
+              <p class="footer__subtxt">Become a Partner</p>
+            </li>
+          </ul>
+        </div>
+        <hr class="footer__hr">
+        <div class="footer__bottom">
+          <p class="footerbottom__txt">Copyright<strong class="footerbottom__txt--strong">2021 HooBank. All Rights Reserved.</strong></p>
+          <ul class="footerbottom__list">
+            <li class="footerbottom__item"><a href="#" class="fooetrbottom__item--img"><img src="./images/instagramlogo.png" alt="accaunt for another cytes" class="footerbottom__img"></a></li>
+            <li class="footerbottom__item"><a href="#" class="fooetrbottom__item--img"><img src="./images/facebook.png" alt="accaunt for another cytes" class="footerbottom__img"></a></li>
+            <li class="footerbottom__item"><a href="#" class="fooetrbottom__item--img"><img src="./images/twitch.png" alt="accaunt for another cytes" class="footerbottom__img"></a></li>
+            <li class="footerbottom__item"><a href="#" class="fooetrbottom__item--img"><img src="./images/linkedin.png" alt="accaunt for another cytes" class="footerbottom__img"></a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </main>
   <script src="./javascript.js"></script>
